--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -13,7 +13,7 @@
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    height: 95vh;
+    height: 100vh;
   }
 
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
@@ -28,8 +28,8 @@
   }
 
   @include respond(phone) {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 95vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 95vh, 0 100%);
   }
 
   &__logo-box {
@@ -49,5 +49,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+
+    @include respond(phone) {
+      top: 50%;
+    }
   }
 }
