--- a/sass/components/_project-box.scss
+++ b/sass/components/_project-box.scss
@@ -3,6 +3,7 @@
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
   border-radius: 3px;
   position: relative;
+  margin-bottom: 2.5rem;
 
   &__image {
     background-size: cover;
