--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,7 +2,7 @@
   padding: 3rem 0;
   background: $color-grey-dark-3;
 
-  [class^="icon-"] {
+  .material-icons {
     font-size: 6rem;
     font-weight: bold;
     background-image: linear-gradient(
@@ -13,10 +13,10 @@
     -webkit-background-clip: text;
     color: transparent;
     display: inline-block;
-    margin-bottom: -2rem;
   }
 
   &__title {
+    margin-top: -1.5rem;
     font-size: 3rem;
   }
 
