--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "layout/navigation";
 @import "layout/grid";
 @import "layout/footer";
+@import "layout/tabbar";
 
 @import "components/button";
 @import "components/card";
