--- a/sass/components/_project-box.scss
+++ b/sass/components/_project-box.scss
@@ -107,6 +107,11 @@
     a {
       font-size: 1.2rem;
       color: $color-white;
+
+      &:focus {
+        outline: 2px solid #fff;
+        padding: 2px;
+      }
     }
 
     &--1 {
