--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,12 @@ body {
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   border-radius: 3px;
   position: relative;
-  margin-bottom: 2.5rem; }
+  margin-bottom: 2.5rem;
+  transition: all 0.3s;
+  z-index: 10; }
+  .project-box:hover {
+    transform: scale(1.1);
+    z-index: 20; }
   .project-box__image {
     background-size: cover;
     background-position: center;
