feat: add repository section

--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,55 @@ body {
     .project-box__footer--3 {
       background-image: linear-gradient(to right bottom, rgba(243, 127, 127, 0.85), rgba(250, 67, 67, 0.85)); }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0.8;
+  z-index: -1;
+  overflow: hidden; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
+.repositories {
+  padding: 5rem 0;
+  position: relative; }
+  .repositories__card {
+    padding: 5rem 0;
+    width: 100%;
+    border-radius: 3px;
+    background: rgba(255, 255, 255, 0.9); }
+    .repositories__card ul {
+      width: 80%;
+      margin: 0 auto;
+      list-style: none;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); }
+      @media only screen and (max-width: 37.5em) {
+        .repositories__card ul {
+          grid-template-columns: repeat(1, 1fr); } }
+      .repositories__card ul li {
+        margin: 1rem 0; }
+  .repositories__link:link, .repositories__link:visited {
+    font-weight: 600;
+    font-size: 1.4rem;
+    color: #7c388d;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    transition: all 0.2s; }
+  .repositories__link:hover, .repositories__link:active, .repositories__link:focus {
+    color: #c6426e;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+    transform: rotate(-1deg) scale(1.1);
+    outline: none; }
+  .repositories__description {
+    font-size: 1rem; }
+
 .about {
   padding: 2rem 0;
   padding-bottom: 10rem; }
