--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,19 +1,21 @@
-@import "abstracts/mixins";
-@import "abstracts/variables";
+@import 'abstracts/mixins';
+@import 'abstracts/variables';
 
-@import "base/animations";
-@import "base/base";
-@import "base/utilities";
-@import "base/typography";
+@import 'base/animations';
+@import 'base/base';
+@import 'base/utilities';
+@import 'base/typography';
 
-@import "layout/header";
-@import "layout/navigation";
-@import "layout/grid";
-@import "layout/footer";
-@import "layout/tabbar";
+@import 'layout/header';
+@import 'layout/navigation';
+@import 'layout/grid';
+@import 'layout/footer';
+@import 'layout/tabbar';
 
-@import "components/button";
-@import "components/card";
-@import "components/project-box";
+@import 'components/button';
+@import 'components/card';
+@import 'components/project-box';
+@import 'components/bg-video';
+@import 'components/repositories';
 
-@import "pages/home";
+@import 'pages/home';
