feat: add loading

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,5 +17,6 @@
 @import 'components/project-box';
 @import 'components/bg-video';
 @import 'components/repositories';
+@import 'components/loading';
 
 @import 'pages/home';
