--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -17,12 +17,8 @@
 
 .knowledge {
   padding: 10rem 0;
-  background-image: linear-gradient(
-      to right bottom,
-      rgba($color-primary-light, 0.8),
-      rgba($color-primary-dark, 0.8)
-    ),
-    url(../assets/image01.jpg);
+  background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)),
+    url(../img/image01.jpg);
   background-size: cover;
   background-position: center;
   transform: skewY(-7deg);
