feat: add new projects

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -13,6 +13,15 @@ $color-blue-dark: #5643fa;
 $color-red-light: #f37f7f;
 $color-red-dark: #fa4343;
 
+$color-pink-light: #f2bac9;
+$color-pink-dark: #c62e65;
+
+$color-purple-light: #b59fff;
+$color-purple-dark: #7159c1;
+
+$color-orange-light: #f9ab55;
+$color-orange-dark: #ff7d00;
+
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 $color-grey-light-3: #cacaca;
