--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,6 +409,14 @@ body {
       background-image: linear-gradient(to right bottom, #88d498, #1a936f), url(../img/projects/rickandmorty.jpg); }
     .project-box__image--3 {
       background-image: linear-gradient(to right bottom, #f37f7f, #fa4343), url(../img/projects/marvel-test.png); }
+    .project-box__image--4 {
+      background-image: linear-gradient(to right bottom, #f2bac9, #c62e65), url(../img/projects/anisearch.png); }
+    .project-box__image--5 {
+      background-image: linear-gradient(to right bottom, #b59fff, #7159c1), url(../img/projects/bethehero.png); }
+    .project-box__image--6 {
+      background-image: linear-gradient(to right bottom, #c6426e, #642b73), url(../img/projects/shiga-projects-v2.png); }
+    .project-box__image--7 {
+      background-image: linear-gradient(to right bottom, #f9ab55, #ff7d00), url(../img/projects/codepen.png); }
   .project-box__heading {
     font-size: 2rem;
     font-weight: 300;
@@ -429,6 +437,14 @@ body {
       background-image: linear-gradient(to right bottom, rgba(136, 212, 152, 0.85), rgba(26, 147, 111, 0.85)); }
     .project-box__heading-span--3 {
       background-image: linear-gradient(to right bottom, rgba(243, 127, 127, 0.85), rgba(250, 67, 67, 0.85)); }
+    .project-box__heading-span--4 {
+      background-image: linear-gradient(to right bottom, rgba(242, 186, 201, 0.85), rgba(198, 46, 101, 0.85)); }
+    .project-box__heading-span--5 {
+      background-image: linear-gradient(to right bottom, rgba(181, 159, 255, 0.85), rgba(113, 89, 193, 0.85)); }
+    .project-box__heading-span--6 {
+      background-image: linear-gradient(to right bottom, rgba(198, 66, 110, 0.85), rgba(100, 43, 115, 0.85)); }
+    .project-box__heading-span--7 {
+      background-image: linear-gradient(to right bottom, rgba(249, 171, 85, 0.85), rgba(255, 125, 0, 0.85)); }
   .project-box__body {
     margin: 0 auto;
     padding: 3rem 0;
@@ -457,6 +473,14 @@ body {
       background-image: linear-gradient(to right bottom, rgba(136, 212, 152, 0.85), rgba(26, 147, 111, 0.85)); }
     .project-box__footer--3 {
       background-image: linear-gradient(to right bottom, rgba(243, 127, 127, 0.85), rgba(250, 67, 67, 0.85)); }
+    .project-box__footer--4 {
+      background-image: linear-gradient(to right bottom, rgba(242, 186, 201, 0.85), rgba(198, 46, 101, 0.85)); }
+    .project-box__footer--5 {
+      background-image: linear-gradient(to right bottom, rgba(181, 159, 255, 0.85), rgba(113, 89, 193, 0.85)); }
+    .project-box__footer--6 {
+      background-image: linear-gradient(to right bottom, rgba(198, 66, 110, 0.85), rgba(100, 43, 115, 0.85)); }
+    .project-box__footer--7 {
+      background-image: linear-gradient(to right bottom, rgba(249, 171, 85, 0.85), rgba(255, 125, 0, 0.85)); }
 
 .bg-video {
   position: absolute;
