feat: add new project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -417,6 +417,8 @@ body {
       background-image: linear-gradient(to right bottom, #c6426e, #642b73), url(../img/projects/shiga-projects-v2.png); }
     .project-box__image--7 {
       background-image: linear-gradient(to right bottom, #f9ab55, #ff7d00), url(../img/projects/codepen.png); }
+    .project-box__image--8 {
+      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../img/projects/skyweather.png); }
   .project-box__heading {
     font-size: 2rem;
     font-weight: 300;
@@ -445,6 +447,8 @@ body {
       background-image: linear-gradient(to right bottom, rgba(198, 66, 110, 0.85), rgba(100, 43, 115, 0.85)); }
     .project-box__heading-span--7 {
       background-image: linear-gradient(to right bottom, rgba(249, 171, 85, 0.85), rgba(255, 125, 0, 0.85)); }
+    .project-box__heading-span--8 {
+      background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
   .project-box__body {
     margin: 0 auto;
     padding: 3rem 0;
@@ -481,6 +485,8 @@ body {
       background-image: linear-gradient(to right bottom, rgba(198, 66, 110, 0.85), rgba(100, 43, 115, 0.85)); }
     .project-box__footer--7 {
       background-image: linear-gradient(to right bottom, rgba(249, 171, 85, 0.85), rgba(255, 125, 0, 0.85)); }
+    .project-box__footer--8 {
+      background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
 
 .bg-video {
   position: absolute;
