--- a/assets/sass/components/_project-box.scss
+++ b/assets/sass/components/_project-box.scss
@@ -23,66 +23,43 @@
     border-top-right-radius: 3px;
 
     &--1 {
-      background-image: linear-gradient(
-          to right bottom,
-          $color-blue-light,
-          $color-blue-dark
-        ),
+      background-image: linear-gradient(to right bottom, $color-blue-light, $color-blue-dark),
         url(../img/projects/shiga-projects-v1.png);
     }
 
     &--2 {
-      background-image: linear-gradient(
-          to right bottom,
-          $color-green-light,
-          $color-green-dark
-        ),
+      background-image: linear-gradient(to right bottom, $color-green-light, $color-green-dark),
         url(../img/projects/rickandmorty.jpg);
     }
 
     &--3 {
-      background-image: linear-gradient(
-          to right bottom,
-          $color-red-light,
-          $color-red-dark
-        ),
+      background-image: linear-gradient(to right bottom, $color-red-light, $color-red-dark),
         url(../img/projects/marvel-test.png);
     }
 
     &--4 {
-      background-image: linear-gradient(
-          to right bottom,
-          $color-pink-light,
-          $color-pink-dark
-        ),
+      background-image: linear-gradient(to right bottom, $color-pink-light, $color-pink-dark),
         url(../img/projects/anisearch.png);
     }
 
     &--5 {
-      background-image: linear-gradient(
-          to right bottom,
-          $color-purple-light,
-          $color-purple-dark
-        ),
+      background-image: linear-gradient(to right bottom, $color-purple-light, $color-purple-dark),
         url(../img/projects/bethehero.png);
     }
 
     &--6 {
-      background-image: linear-gradient(
-          to right bottom,
-          $color-primary-light,
-          $color-primary-dark
-        ),
+      background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark),
         url(../img/projects/shiga-projects-v2.png);
     }
 
     &--7 {
-      background-image: linear-gradient(
-          to right bottom,
-          $color-orange-light,
-          $color-orange-dark
-        ),
+      background-image: linear-gradient(to right bottom, $color-orange-light, $color-orange-dark),
         url(../img/projects/codepen.png);
+    }
+
+    &--8 {
+      background-image: linear-gradient(to right bottom, $color-blue-light, $color-blue-dark),
+        url(../img/projects/skyweather.png);
     }
   }
 
@@ -104,35 +81,19 @@
     box-decoration-break: clone;
 
     &--1 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-blue-light, 0.85),
-        rgba($color-blue-dark, 0.85)
-      );
+      background-image: linear-gradient(to right bottom, rgba($color-blue-light, 0.85), rgba($color-blue-dark, 0.85));
     }
 
     &--2 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-green-light, 0.85),
-        rgba($color-green-dark, 0.85)
-      );
+      background-image: linear-gradient(to right bottom, rgba($color-green-light, 0.85), rgba($color-green-dark, 0.85));
     }
 
     &--3 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-red-light, 0.85),
-        rgba($color-red-dark, 0.85)
-      );
+      background-image: linear-gradient(to right bottom, rgba($color-red-light, 0.85), rgba($color-red-dark, 0.85));
     }
 
     &--4 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-pink-light, 0.85),
-        rgba($color-pink-dark, 0.85)
-      );
+      background-image: linear-gradient(to right bottom, rgba($color-pink-light, 0.85), rgba($color-pink-dark, 0.85));
     }
 
     &--5 {
@@ -157,6 +118,10 @@
         rgba($color-orange-light, 0.85),
         rgba($color-orange-dark, 0.85)
       );
+    }
+
+    &--8 {
+      background-image: linear-gradient(to right bottom, rgba($color-blue-light, 0.85), rgba($color-blue-dark, 0.85));
     }
   }
 
@@ -190,35 +155,19 @@
     }
 
     &--1 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-blue-light, 0.85),
-        rgba($color-blue-dark, 0.85)
-      );
+      background-image: linear-gradient(to right bottom, rgba($color-blue-light, 0.85), rgba($color-blue-dark, 0.85));
     }
 
     &--2 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-green-light, 0.85),
-        rgba($color-green-dark, 0.85)
-      );
+      background-image: linear-gradient(to right bottom, rgba($color-green-light, 0.85), rgba($color-green-dark, 0.85));
     }
 
     &--3 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-red-light, 0.85),
-        rgba($color-red-dark, 0.85)
-      );
+      background-image: linear-gradient(to right bottom, rgba($color-red-light, 0.85), rgba($color-red-dark, 0.85));
     }
 
     &--4 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-pink-light, 0.85),
-        rgba($color-pink-dark, 0.85)
-      );
+      background-image: linear-gradient(to right bottom, rgba($color-pink-light, 0.85), rgba($color-pink-dark, 0.85));
     }
 
     &--5 {
@@ -243,6 +192,10 @@
         rgba($color-orange-light, 0.85),
         rgba($color-orange-dark, 0.85)
       );
+    }
+
+    &--8 {
+      background-image: linear-gradient(to right bottom, rgba($color-blue-light, 0.85), rgba($color-blue-dark, 0.85));
     }
   }
 }
