--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -10,6 +10,9 @@ $color-green-dark: #1a936f;
 $color-blue-light: #2998ff;
 $color-blue-dark: #5643fa;
 
+$color-blue2-light: #25bcf7;
+$color-blue2-dark: #0c7ba7;
+
 $color-red-light: #f37f7f;
 $color-red-dark: #fa4343;
 
